// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar/> renders correctly if prop expanded set false 1`] = `
<aside
  className="SidebarStyled-huzlez iQDTlJ"
>
  <div
    className="SidebarBoxStyled-hShvpg kFprkQ"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop expanded set true 1`] = `
<aside
  className="SidebarStyled-huzlez gRfSoA"
>
  <div
    className="SidebarBoxStyled-hShvpg dDGNFi"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set false 1`] = `
<aside
  className="SidebarStyled-huzlez gRfSoA"
>
  <div
    className="SidebarBoxStyled-hShvpg dDGNFi"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true 1`] = `
<aside
  className="SidebarStyled-huzlez gHnbZT"
>
  <div
    className="SidebarBoxStyled-hShvpg ctSjog"
  >
    <button
      className="SidebarToggleStyled-hXoQiO iPHaTI"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled-kIzVex cmrxLj"
      >
        <div
          className="IconSvgStyled-cegYAl NBqjj"
          color=""
          rotate={0}
          size="normal"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <polygon
              points="13.8,18.2 7.6,12 13.8,5.8 15.2,7.2 10.4,12 15.2,16.8"
            />
          </svg>
        </div>
      </div>
      <div
        className="ToggleContentStyled-dJNHMj fMwRZj"
      >
        <div
          className="ToggleTextStyled-YrHhI jQgJxk"
        >
          Collapse
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop haveToggleButton set true and toggleButtonText set 1`] = `
<aside
  className="SidebarStyled-huzlez gHnbZT"
>
  <div
    className="SidebarBoxStyled-hShvpg ctSjog"
  >
    <button
      className="SidebarToggleStyled-hXoQiO iPHaTI"
      onClick={[Function]}
    >
      <div
        className="ToggleIconStyled-kIzVex cmrxLj"
      >
        <div
          className="IconSvgStyled-cegYAl NBqjj"
          color=""
          rotate={0}
          size="normal"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <polygon
              points="13.8,18.2 7.6,12 13.8,5.8 15.2,7.2 10.4,12 15.2,16.8"
            />
          </svg>
        </div>
      </div>
      <div
        className="ToggleContentStyled-dJNHMj fMwRZj"
      >
        <div
          className="ToggleTextStyled-YrHhI jQgJxk"
        >
          test
        </div>
      </div>
    </button>
  </div>
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set false 1`] = `
<aside
  className="SidebarStyled-huzlez gRfSoA"
>
  <div
    className="SidebarBoxStyled-hShvpg dDGNFi"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop right set true 1`] = `
<aside
  className="SidebarStyled-huzlez gRfSoA"
>
  <div
    className="SidebarBoxStyled-hShvpg dDGNFi"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly if prop spread set true 1`] = `
<aside
  className="SidebarStyled-huzlez gRfSoA"
>
  <div
    className="SidebarBoxStyled-hShvpg dDGNFi"
  />
</aside>
`;

exports[`<Sidebar/> renders correctly with default props 1`] = `
<aside
  className="SidebarStyled-huzlez gRfSoA"
>
  <div
    className="SidebarBoxStyled-hShvpg dDGNFi"
  />
</aside>
`;

exports[`<SidebarRegion/> renders correctly if prop bordered 1`] = `
<div
  className="SidebarRegionStyled-bJSMUP HmlYe"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollable 1`] = `
<div
  className="SidebarRegionStyled-bJSMUP gJQUWD"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop scrollableMinHeight set 0 1`] = `
<div
  className="SidebarRegionStyled-bJSMUP ebxVeA"
/>
`;

exports[`<SidebarRegion/> renders correctly if prop spread 1`] = `
<div
  className="SidebarRegionStyled-bJSMUP QCwEI"
/>
`;

exports[`<SidebarRegion/> renders correctly with default props 1`] = `
<div
  className="SidebarRegionStyled-bJSMUP ebxVeA"
/>
`;

exports[`<SidebarToggle/> renders correctly if prop toggleButtonText set 1`] = `
<button
  className="SidebarToggleStyled-hXoQiO iPHaTI"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled-kIzVex eBMkBa"
  >
    <div
      className="IconSvgStyled-cegYAl NBqjj"
      color=""
      rotate={0}
      size="normal"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <polygon
          points="13.8,18.2 7.6,12 13.8,5.8 15.2,7.2 10.4,12 15.2,16.8"
        />
      </svg>
    </div>
  </div>
  <div
    className="ToggleContentStyled-dJNHMj fMwRZj"
  >
    <div
      className="ToggleTextStyled-YrHhI eEqBAR"
    >
      test
    </div>
  </div>
</button>
`;

exports[`<SidebarToggle/> renders correctly with default props 1`] = `
<button
  className="SidebarToggleStyled-hXoQiO iPHaTI"
  onClick={[Function]}
>
  <div
    className="ToggleIconStyled-kIzVex eBMkBa"
  >
    <div
      className="IconSvgStyled-cegYAl NBqjj"
      color=""
      rotate={0}
      size="normal"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <polygon
          points="13.8,18.2 7.6,12 13.8,5.8 15.2,7.2 10.4,12 15.2,16.8"
        />
      </svg>
    </div>
  </div>
  <div
    className="ToggleContentStyled-dJNHMj fMwRZj"
  >
    <div
      className="ToggleTextStyled-YrHhI eEqBAR"
    >
      Collapse
    </div>
  </div>
</button>
`;
